--- a/hooks/build
+++ b/hooks/build
@@ -11,15 +11,15 @@ printf "DOCKERFILE_PATH=\"${DOCKERFILE_PATH}\"\\n"
 printf "CACHE_TAG=\"${CACHE_TAG}\"\\n"
 printf "IMAGE_NAME=\"${IMAGE_NAME}\"\\n"
 
-# INTERNAL_TAG is only used for extracting the BASE_IMAGE and the VERSION, adding our own tags happens in post_push
-INTERNAL_TAG="${SOURCE_BRANCH}"
+# LONG_TAG is only used for extracting the BASE_IMAGE and the VERSION, adding our own tags happens in post_push
+LONG_TAG="${SOURCE_BRANCH}"
 if test "${SOURCE_BRANCH}" = "master"; then
     DOCKERFILE_BASE_IMAGE="$(sed -n "s/ARG BASE_IMAGE=\"\(.*\)\"/\1/p" Dockerfile | sed -e '1 s/:/-/; t')"
     DOCKERFILE_VERSION="$(sed -n "s/ARG VERSION=\"\(.*\)\"/\1/p" Dockerfile)"
-    INTERNAL_TAG="${DOCKERFILE_VERSION}-on-${DOCKERFILE_BASE_IMAGE}"
+    LONG_TAG="${DOCKERFILE_VERSION}-on-${DOCKERFILE_BASE_IMAGE}"
 fi
-BASE_IMAGE="$(printf "${INTERNAL_TAG}" | awk -F "-on-" '{print $2}' | sed -e '1 s/\-/:/; t')"
-VERSION="$(printf "${INTERNAL_TAG}" | awk -F "-on-" '{print $1}')"
+BASE_IMAGE="$(printf "${LONG_TAG}" | awk -F "-on-" '{print $2}' | sed -e '1 s/\-/:/; t')"
+VERSION="$(printf "${LONG_TAG}" | awk -F "-on-" '{print $1}')"
 BUILD_DATE="$(date -u +"%Y-%m-%dT%H:%M:%SZ")"
 VCS_REF="$(git rev-parse HEAD)"
 
